--- a/app/src/main/res/drawable/button_pet_state.xml
+++ b/app/src/main/res/drawable/button_pet_state.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--导航栏pet按钮切换-->
+<!--导航栏个人中心按钮切换-->
 <selector xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:state_pressed="true" android:drawable="@drawable/icon_gift_default" />
     <item android:state_enabled="false" android:drawable="@drawable/icon_gift_selected"/>
