--- a/app/src/main/res/layout/fragment_add_reward.xml
+++ b/app/src/main/res/layout/fragment_add_reward.xml
@@ -7,29 +7,32 @@
     <!--状态栏-->
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="22dp"
-        android:background="@mipmap/clander_bg_top"
+        android:layout_height="25dp"
+        android:background="#57a0d2"
         android:layout_alignParentTop="true"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#ffffff"
-        android:layout_marginTop="22dp">
+        android:background="#47b8e7"
+        android:layout_marginTop="25dp">
         <ImageButton
             android:id="@+id/return_integral"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/arrow_left"
+            android:src="@mipmap/arrow_leftw"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:padding="12dp"/>
+            android:paddingLeft="12dp"
+            android:paddingRight="20dp"
+            android:paddingTop="15dp"
+            android:paddingBottom="15dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="添加奖励"
             android:textSize="18sp"
-            android:textColor="#262626"/>
+            android:textColor="#ffffff"/>
         <ImageButton
             android:id="@+id/image_btn_save_integral"
             android:layout_width="wrap_content"
@@ -38,7 +41,10 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:padding="12dp"/>
+            android:paddingRight="12dp"
+            android:paddingBottom="15dp"
+            android:paddingTop="15dp"
+            android:paddingLeft="20dp"/>
 
     </RelativeLayout>
     <RelativeLayout
