--- a/app/src/main/res/layout/alertdialog_edit.xml
+++ b/app/src/main/res/layout/alertdialog_edit.xml
@@ -1,4 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
+
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="288dp"
     android:layout_height="204dp"
@@ -22,14 +23,13 @@
         android:textColor="#333333"
         android:textSize="14sp" />
 
-    <EditText
+    <TextView
+        android:id="@+id/new_habit_name_text_view"
         android:layout_width="252dp"
         android:layout_height="wrap_content"
         android:layout_marginLeft="13dp"
         android:layout_marginTop="60dp"
-        android:hint="请输入习惯新名字"
         android:maxLength="10"
-        android:text="原来的习惯名字"
         android:textColor="#555555"
         android:textCursorDrawable="@drawable/color_cursor"
         android:textSize="12sp"
@@ -54,7 +54,8 @@
         android:textOff="  "
         android:textOn="  "
         android:thumb="@drawable/thumb"
-        android:track="@drawable/track" />
+        android:track="@drawable/track"
+        />
     <!--<view-->
     <!--android:layout_width="279dp"-->
     <!--android:layout_height="1dp"-->
@@ -102,5 +103,4 @@
         android:text="完成"
         android:textColor="#4aa0eb"
         android:textSize="18sp" />
-
 </RelativeLayout>
