--- a/app/src/main/res/layout/fragment_add_reward.xml
+++ b/app/src/main/res/layout/fragment_add_reward.xml
@@ -7,32 +7,29 @@
     <!--状态栏-->
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:background="#57a0d2"
+        android:layout_height="22dp"
+        android:background="@mipmap/clander_bg_top"
         android:layout_alignParentTop="true"/>
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#47b8e7"
-        android:layout_marginTop="25dp">
+        android:background="#ffffff"
+        android:layout_marginTop="22dp">
         <ImageButton
             android:id="@+id/return_integral"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@mipmap/arrow_leftw"
+            android:src="@mipmap/arrow_left"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:paddingLeft="12dp"
-            android:paddingRight="20dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"/>
+            android:padding="12dp"/>
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="添加奖励"
             android:textSize="18sp"
-            android:textColor="#ffffff"/>
+            android:textColor="#262626"/>
         <ImageButton
             android:id="@+id/image_btn_save_integral"
             android:layout_width="wrap_content"
@@ -41,10 +38,7 @@
             android:layout_alignParentRight="true"
             android:layout_centerVertical="true"
             android:background="@null"
-            android:paddingRight="12dp"
-            android:paddingBottom="15dp"
-            android:paddingTop="15dp"
-            android:paddingLeft="20dp"/>
+            android:padding="12dp"/>
 
     </RelativeLayout>
     <RelativeLayout
