--- a/app/src/main/res/layout/fragment_new_habit.xml
+++ b/app/src/main/res/layout/fragment_new_habit.xml
@@ -11,25 +11,22 @@
 
     <ImageView
         android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:background="#57a0d2"
+        android:layout_height="22dp"
+        android:background="@mipmap/clander_bg_top"
         android:layout_alignParentTop="true"/>
     <RelativeLayout
-        android:layout_marginTop="25dp"
+        android:layout_marginTop="22dp"
         android:layout_width="match_parent"
         android:layout_height="50dp"
-        android:background="#47b8e7">
+        android:background="#ffffff">
 
         <ImageButton
             android:id="@+id/return_imageButton"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
-            android:paddingLeft="12dp"
-            android:paddingBottom="15dp"
-            android:paddingRight="20dp"
-            android:paddingTop="15dp"
-            android:src="@mipmap/arrow_leftw"
+            android:padding="12dp"
+            android:src="@mipmap/arrow_left"
             android:background="@null"/>
 
         <TextView
@@ -38,7 +35,7 @@
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="新习惯"
-            android:textColor="#ffffff"
+            android:textColor="#262626"
             android:textSize="18sp" />
 
         <ImageButton
@@ -47,10 +44,7 @@
             android:layout_height="wrap_content"
             android:layout_centerVertical="true"
             android:layout_alignParentRight="true"
-            android:paddingRight="13dp"
-            android:paddingTop="15dp"
-            android:paddingBottom="15dp"
-            android:paddingLeft="20dp"
+            android:layout_marginRight="13dp"
             android:src="@mipmap/invalid_name"
             android:background="@null"/>
     </RelativeLayout>
@@ -59,7 +53,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="80dp"
+        android:layout_marginTop="77dp"
         android:background="@mipmap/rectangle_2"
         android:elevation="4dp">
 
@@ -217,7 +211,7 @@
         android:layout_width="wrap_content"
         android:layout_height="260dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="270dp"
+        android:layout_marginTop="267dp"
         android:background="@mipmap/rectangle_2"
         android:elevation="4dp">
         <TextView
