--- a/app/src/main/res/layout/fragment_personal.xml
+++ b/app/src/main/res/layout/fragment_personal.xml
@@ -2,19 +2,12 @@
 <!--personalFragment-->
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="#f9f9f9">
-
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:background="#57a0d2"
-        android:layout_alignParentTop="true"/>
+    android:layout_height="match_parent">
     <RelativeLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:background="@mipmap/blue_card_1"
-        android:layout_marginTop="25dp">
+        android:layout_marginTop="22dp">
 
         <TextView
             android:layout_width="wrap_content"
@@ -85,7 +78,6 @@
                     android:id="@+id/tv_my_holdDay"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="99"
                     android:textSize="21sp"
                     android:textColor="#262626"
                     android:layout_centerHorizontal="true"
@@ -133,172 +125,12 @@
 
     </RelativeLayout>
 
-    <LinearLayout
-        android:layout_width="match_parent"
+    <RelativeLayout
+        android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="302dp"
-        android:orientation="vertical">
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="50dp"
-            android:background="#ffffff">
-            <ImageView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:src="@mipmap/icon_clock_1"
-                android:layout_marginLeft="29dp"
-                android:layout_centerVertical="true"/>
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="设置提醒"
-                android:textSize="16sp"
-                android:textColor="#333333"
-                android:layout_centerVertical="true"
-                android:layout_marginLeft="57dp"/>
-            <Switch
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:switchMinWidth="20dp"
-                android:textOff="  "
-                android:textOn="  "
-                android:thumb="@drawable/thumb"
-                android:track="@drawable/track"
-                android:layout_alignParentRight="true"
-                android:layout_centerVertical="true"
-                android:layout_marginRight="17dp"/>
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="102dp"
-            android:background="@mipmap/profile_card_1"
-            android:layout_marginTop="10dp">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/icon_completed"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="29dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="已完成习惯"
-                    android:textSize="16sp"
-                    android:textColor="#333333"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="57dp"/>
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/arrow_left1"
-                    android:layout_alignParentRight="true"
-                    android:paddingRight="30dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="20dp"
-                    android:background="@null"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
-            <View
-                android:layout_width="327dp"
-                android:layout_height="1dp"
-                android:layout_centerInParent="true"
-                android:background="#bebebe"/>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="50dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/icon_gift_1"
-                    android:layout_marginLeft="29dp"
-                    android:layout_centerVertical="true"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="已兑换奖励"
-                    android:textSize="16sp"
-                    android:textColor="#333333"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="57dp"/>
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/arrow_left1"
-                    android:layout_alignParentRight="true"
-                    android:paddingRight="30dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="20dp"
-                    android:background="@null"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
+        android:background="@mipmap/card_1_1"
+        android:layout_centerHorizontal="true"
+        android:layout_marginTop="302dp">
 
-        </RelativeLayout>
-        <RelativeLayout
-            android:layout_width="match_parent"
-            android:layout_height="102dp"
-            android:background="@mipmap/profile_card_1"
-            android:layout_marginTop="10dp">
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/icon_aboutus"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="29dp"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="关于我们"
-                    android:textSize="16sp"
-                    android:textColor="#333333"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="57dp"/>
-                <ImageButton
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/arrow_left1"
-                    android:layout_alignParentRight="true"
-                    android:paddingRight="30dp"
-                    android:paddingTop="10dp"
-                    android:paddingBottom="10dp"
-                    android:paddingLeft="20dp"
-                    android:background="@null"
-                    android:layout_centerVertical="true"/>
-            </RelativeLayout>
-            <View
-                android:layout_width="327dp"
-                android:layout_height="1dp"
-                android:layout_centerInParent="true"
-                android:background="#bebebe"/>
-            <RelativeLayout
-                android:layout_width="match_parent"
-                android:layout_height="50dp"
-                android:layout_marginTop="50dp">
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:src="@mipmap/icon_clear"
-                    android:layout_marginLeft="29dp"
-                    android:layout_centerVertical="true"/>
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="清除缓存"
-                    android:textSize="16sp"
-                    android:textColor="#333333"
-                    android:layout_centerVertical="true"
-                    android:layout_marginLeft="57dp"/>
-            </RelativeLayout>
-
-        </RelativeLayout>
-
-    </LinearLayout>
+    </RelativeLayout>
 </RelativeLayout>
