--- a/app/src/main/res/layout/habit_item_situation.xml
+++ b/app/src/main/res/layout/habit_item_situation.xml
@@ -3,25 +3,19 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#f9f9f9">
-    <ImageView
-        android:layout_width="match_parent"
-        android:layout_height="25dp"
-        android:background="#57a0d2"
-        android:layout_alignParentTop="true"/>
 
     <RelativeLayout
         android:layout_width="match_parent"
-        android:layout_height="50dp"
-        android:background="#47b8e7"
-        android:id="@+id/relativeLayout"
-        android:layout_marginTop="25dp">
+        android:layout_height="58dp"
+        android:background="#ffffff"
+        android:id="@+id/relativeLayout">
 
         <TextView
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_centerInParent="true"
             android:text="习惯详情"
-            android:textColor="#ffffff"
+            android:textColor="#262626"
             android:textSize="18sp" />
 
         <ImageButton
@@ -29,12 +23,9 @@
             android:layout_width="36dp"
             android:layout_height="50dp"
             android:layout_centerVertical="true"
-            android:paddingLeft="12dp"
-            android:paddingRight="20dp"
-            android:paddingBottom="15dp"
-            android:padding="15dp"
+            android:layout_marginLeft="8dp"
             android:background="@null"
-            android:src="@mipmap/arrow_leftw" />
+            android:src="@mipmap/arrow_left" />
     </RelativeLayout>
 
     <RelativeLayout
@@ -42,8 +33,7 @@
         android:layout_height="136dp"
         android:background="@mipmap/card_1_bg"
         android:layout_below="@+id/relativeLayout"
-        android:layout_alignEnd="@+id/relativeLayout2"
-        android:layout_marginTop="10dp">
+        android:layout_alignEnd="@+id/relativeLayout2">
 
         <!--//该图标需要自动去匹配！-->
         <!--<f3.nsu.com.habit.ui.DrawCircle-->
@@ -65,8 +55,6 @@
             android:layout_height="wrap_content"
             android:layout_marginLeft="26dp"
             android:layout_marginTop="7dp"
-            android:text="习惯名称"
-            android:textColor="#262626"
             android:textSize="16sp" />
 
         <RelativeLayout
@@ -80,8 +68,7 @@
                 android:id="@+id/image_view_eg"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:src="@mipmap/icon_edit"
-                android:layout_marginTop="3dp"/>
+                android:src="@mipmap/icon_edit" />
             <TextView
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
@@ -164,7 +151,7 @@
         android:layout_width="350dp"
         android:layout_height="149dp"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="232dp"
+        android:layout_marginTop="207dp"
         android:background="@mipmap/card_2_bg"
         android:id="@+id/relativeLayout2">
 
@@ -214,7 +201,7 @@
         android:layout_width="350dp"
         android:layout_height="wrap_content"
         android:layout_centerHorizontal="true"
-        android:layout_marginTop="389dp"
+        android:layout_marginTop="364dp"
         android:background="@mipmap/card_3_bg">
 
         <ImageView
