--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -41,7 +41,6 @@
             android:paddingRight="20dp"
             android:paddingTop="15dp"
             android:paddingLeft="20dp"/>
-
     </RelativeLayout>
     <!--日历按钮折叠部分-->
     <f3.nsu.com.habit.ui.ExpandLayout
@@ -144,20 +143,24 @@
             android:layout_height="101dp"
             android:layout_marginTop="26dp"
             android:layout_marginLeft="134dp"/>
-
     </f3.nsu.com.habit.ui.ExpandLayout>
     <!--listView-->
-    <ListView
-        android:id="@+id/habit_ListView"
-        android:layout_width="347dp"
-        android:layout_height="wrap_content"
-        android:layout_centerHorizontal="true"
-        android:overScrollMode="never"
-        android:scrollbars="none"
-        android:longClickable="true"
-        android:layout_below="@id/expandLayout"
-        android:divider="#00000000"
-        android:dividerHeight="10dp">
-
-    </ListView>
+        <ListView
+            android:id="@+id/habit_ListView"
+            android:layout_width="347dp"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/expandLayout"
+            android:layout_centerHorizontal="true"
+            android:overScrollMode="never"
+            android:scrollbars="none"
+            android:longClickable="true"
+            android:divider="#00000000"
+            android:dividerHeight="10dp">
+        </ListView>
+        <ImageView
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="220dp"
+            android:id="@+id/list_view_background"
+            android:layout_centerHorizontal="true"/>
 </RelativeLayout>
