--- a/app/src/main/res/layout/fragment_integral.xml
+++ b/app/src/main/res/layout/fragment_integral.xml
@@ -64,12 +64,13 @@
         android:id="@+id/integral_ListView"
         android:layout_width="320dp"
         android:layout_height="352dp"
-        android:layout_centerHorizontal="true"
         android:background="@mipmap/card_bg"
-        android:layout_marginTop="227dp"
         android:overScrollMode="never"
         android:scrollbars="none"
-        android:divider="#00000000">
+        android:divider="#00000000"
+        android:layout_alignParentBottom="true"
+        android:layout_centerHorizontal="true"
+        android:layout_marginBottom="23dp">
     </ListView>
     <ImageView
         android:layout_width="wrap_content"
